--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "json-server --watch src/database/db.json --port 5000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "yup": "^1.1.1"
   },
