--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@types/node": "^20.2.5",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^17.0.0",
