--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "json-server --watch src/database/db.json --port 5000"
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -22,7 +21,7 @@
     "@types/react-dom": "^17.0.0",
     "json-server": "^0.17.3",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
+    "vite": "^4.3.4",
     "vite-plugin-react": "^4.0.0"
   }
 }
